test/official_tests/return/at_top_level.lox
return "wat"; // error: {"line":1,"message":"Can't return from top-level code","type":"RuntimeError"}
